- Style changes for fieldset rows. Now have a header to keep correct spacing for all fields
- Small optimization of css classes

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -1146,12 +1146,12 @@ th.sheet-default-header {
     vertical-align: middle;
 }
 
-.sheet-centering {
-    text-align: center;
-    vertical-align: middle;
-}
+.sheet-centering,
 .sheet-centering-padding-left {
     text-align: center;
     vertical-align: middle;
+}
+
+.sheet-centering-padding-left {
     padding-left: 5px;
 }
